# strom

./: .gitignore  CMakeLists.txt  README.md  compile.sh  go.sh  rbcL.nex  storm.cpp  storm.h  strom.conf
.github/workflows/: c-cpp.yml
src/: asrv.hpp  chain.hpp  data.hpp  datatype.hpp  dirichlet_updater.hpp  exchangeability_updater.hpp  gamma_ratevar_updater.hpp  genetic_code.hpp  go.sh  likelihood.hpp  lot.hpp  main.cpp  meson.build  meson.build.ci  model.hpp  morpho_6.nex  node.hpp  omega_updater.hpp  output_manager.hpp  partition.hpp  pinvar_updater.hpp  polytomy_updater.hpp  qmatrix.hpp  split.hpp  statefreq_updater.hpp  strom.conf  strom.hpp  subset_relrate_updater.hpp  topo_prior_calculator.hpp  tree.hpp  tree_length_updater.hpp  tree_manip.hpp  tree_summary.hpp  tree_updater.hpp  updater.hpp  xstrom.hpp
